--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	<!-- Your Memos API -->
 	<script type="text/javascript">
 		var memos = {
-			host: 'https://demo.usememos.com/',  // Your Memos instance.
+			host: 'https://memos.wilsonmk.xyz/',  // Your Memos instance.
 			limit: '10',	// Pagination to show.
 			creatorId: '1',  // The old instance is 101, and the new instance is 1. 
 			domId: '#memos',	// Default #memos.
