--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 			<div class="title">Memos</div>
 
 			<div class="pages">
-					<a href="https://github.com/eallion/memos.top" target="_blank" rel="noopener noreferrer" class="">GitHub</a>
-					<a href="https://eallion.com/memos" target="_blank" rel="noopener noreferrer" class="">I'm Feeling Lucky</a>
+					<a href="https://github.com/wilsonmk/memos" target="_blank" rel="noopener noreferrer" class="">GitHub</a>
+					<a href="https://mood.wilsonmk.xyz" target="_blank" rel="noopener noreferrer" class="">牢骚</a>
 			</div>
 
 		</div>
