--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
 		<p>Copyright @
 			<script>
 				document.write(new Date().getFullYear())
-			</script><a href="https://www.eallion.com/" target="_blank" rel="noopener noreferrer" class="hidden">Charles
-				'eallion' Chin</a> All Rights Reserved.
+			</script><a href="https://wilsonmk.xyz/" target="_blank" rel="noopener noreferrer" class="hidden">wilson</a> All Rights Reserved.
 		</p>
 
 	</footer>
@@ -65,7 +64,7 @@
 		var memos = {
 			host: 'https://memos.wilsonmk.xyz/',  // Your Memos instance.
 			limit: '10',	// Pagination to show.
-			creatorId: '1',  // The old instance is 101, and the new instance is 1. 
+			creatorId: '101',  // The old instance is 101, and the new instance is 1. 
 			domId: '#memos',	// Default #memos.
 			username: 'memos',	// You can customize the display ID that is not related to memos.
 			name: 'Official Demo',	// You can customize the displayed full name, that is not related to memos.
